--- a/src/components/HobbyItem.css
+++ b/src/components/HobbyItem.css
@@ -25,7 +25,19 @@
 
             opacity: 1;
         }
+
+        & .hobby-item-background {
+            opacity: 0.5;
+        }
     }
+}
+
+.hobby-item-background {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity ease 1s;
+    background-color: black;
 }
 
 .hobby-item-content-container {
