백그라운드 추가

--- a/src/components/HobbyItem.css
+++ b/src/components/HobbyItem.css
@@ -29,6 +29,7 @@
         & .hobby-item-background {
             opacity: 0.5;
         }
+
     }
 }
 
@@ -50,6 +51,7 @@
     & > div {
         width: 30%;
     }
+
 }
 
 .hobby-item-container {
@@ -67,6 +69,8 @@
     position: absolute;
     left: 50%;
     top: 50%;
+
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
     transform: translate(-50%, -50%);
 
