--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,33 @@
+@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 html, body, main {
     margin: 0;
     padding: 0;
+    font-family: 'NanumSquareRound', serif;
+}
+
+.main-background-active {
+}
+
+.main-background {
+    transition: opacity ease 0.5s;
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    z-index: 1;
+    position: relative;
+}
+.main-background-blur {
+    height: 100vh;
+    width: 100vw;
+    backdrop-filter: blur(20px);
+    background-color: transparent;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
 }
