--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 html, body, main {
     margin: 0;
     padding: 0;
-    font-family: 'NanumSquareRound', serif;
+    font-family: "nanumsquare", serif;
 }
 
 
